kustomize/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: alertmanager
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alertmanager
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: alertmanager
    spec:
      containers:
        - args:
            - --config.file=/etc/alertmanager.yml
          image: prom/alertmanager:v0.23.0
          name: alertmanager
          resources: {}
          volumeMounts:
            - mountPath: /etc/alertmanager.yml
              name: alertmanager-claim0
      restartPolicy: Always
      volumes:
        - name: alertmanager-claim0
          persistentVolumeClaim:
            claimName: alertmanager-claim0
status: {}
