kustomize/cloudprober-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudprober
  labels:
    app: cloudmonitor-prober
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudmonitor-prober
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloudmonitor-prober
    spec:
      containers:
        - image: cloudprober/cloudprober:v0.11.9
          name: cloudprober
          args: [
                  "--logtostderr"
                ]
          volumeMounts:
            - mountPath: /etc/cloudprober.cfg
              subPath: cloudprober.cfg
              name: prober-config
      restartPolicy: Always
      volumes:
        - name: prober-config
          configMap:
            name: cloudprober-config
