kustomize/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudmonitor-prom
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudmonitor-prom
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloudmonitor-prom
    spec:
      containers:
        - args:
            - --web.enable-lifecycle
            - --config.file=/etc/prometheus/prometheus.yml
          image: prom/prometheus:v2.38.0
          name: prometheus
          ports:
            - name: http
              containerPort: 9090
          volumeMounts:
            - mountPath: /etc/prometheus
              name: prom-config
      restartPolicy: Always
      volumes:
        - name: prom-config
          configMap:
            name: prometheus-config
