kustomize/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  labels:
    app: cloudmonitor
spec:
  selector:
    app: alertmanager
  ports:
  - port: 9093
    targetPort: 9093
