kustomize/cloudprober-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudprober-service
  labels:
    app: cloudmonitor
spec:
  type: ClusterIP
  selector:
    app: cloudmonitor
  ports:
  - port: 9313
    targetPort: 9313
