kustomize/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: cloudmonitor
spec:
  selector:
    app: cloudmonitor
  ports:
  - port: 9090
    targetPort: 9090
