kustomize/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - am.monitoring.clarkezone.dev
    secretName: am-dev-tls
  rules:
  - host: am.monitoring.clarkezone.dev
    http:
      paths:
      - backend:
          service:
            name: "alertmanager-service"
            port:
              number: 9093
        path: /
        pathType: Prefix
