kustomize/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - prom.your-domain.net
    secretName: prom-dev-tls
  rules:
  - host: prom.your-domain.net
    http:
      paths:
      - backend:
          service:
            name: "prometheus-service"
            port:
              number: 9090
        path: /
        pathType: Prefix
